tests/rosetta/out/Java/benfords-law.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/benfords-law.mochi:74:15: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/benfords-law.mochi:74:15

 74 |       counts[d-1] = counts[d-1] + 1
    |               ^

help:
  Parse error occurred. Check syntax near this location.